tests/errors/substructural/check/drop_of_drop_ref.sim

        fn f(r: &drop i64) {
            entry:
            drop r;
            return
        }
        